
set(SOURCE_FILES include/Map.h include/Cell.h source/Cell.cpp source/Map.cpp include/World.h include/Entity.h include/DataTable.h source/DataTable.cpp source/Entity.cpp source/options.cpp include/options.h source/validate_options.cpp include/validate_options.h source/World.cpp)
add_library(project ${SOURCE_FILES})

